--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://formegusto.github.io/project-cccroom",
+  "homepage": "https://formegusto.github.io/project-CCCRoom",
   "name": "project-cccroom",
   "version": "0.1.0",
   "private": true,
